--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -231,7 +231,7 @@ span.contacts_item-title {text-transform: uppercase;font-weight: 600;font-size: 
 .page_contacts-form form.wpcf7-form {padding: 20px 0;display: flex;justify-content: space-around}
 .page_contacts-form .wpcf7-form input,.page_contacts-form .wpcf7-form textarea{margin: 0 10px}
 .wpcf7-spinner{display: none}
-.page_contacts-text-block{border: 1px solid #3f3354;border-radius: 5px;padding: 50px;margin: 20px 0;background-color: var(--main-white-color);color: #1a0930;font-weight: 600}
+.page_contacts-text-block{border: 1px solid #3f3354;border-radius: 5px;padding: 50px;margin: 20px 0;background-color: var(--main-white-color);color: #1a0930;font-weight: 600;text-align: center}
 .page__about_wrapper{display: flex;align-items: center;padding-top: 20px;gap: 20px}
 .page__about_wrapper-left,.page__about_wrapper-right{width: 50%}
 .about_item {display: flex;padding: 10px 0px;align-items: center;gap: 15px}
