--- a/static/css/style-adaptive-min.css
+++ b/static/css/style-adaptive-min.css
@@ -508,6 +508,25 @@
         justify-content: flex-end;
         text-align:right
     }
+
+
+}
+
+
+
+@media(max-width:768px){
+    .page__contacts_map-wrapper{
+        flex-direction:column
+    }
+    .page__contacts_map-wrapper .map,.page__contacts_map-wrapper .form{
+        width:100%
+    }
+    .page__contacts_map-wrapper .map{
+        margin-bottom:20px
+    }
+    .page_contacts-form form.wpcf7-form{
+        flex-direction: column
+    }
 }
 
 @media(max-width:430px){
@@ -523,18 +542,6 @@
     .contacts_item:nth-child(even){
         justify-content: flex-start;
         text-align:left
-    }
-}
-
-@media(max-width:768px){
-    .page__contacts_map-wrapper{
-        flex-direction:column
-    }
-    .page__contacts_map-wrapper .map,.page__contacts_map-wrapper .form{
-        width:100%
-    }
-    .page__contacts_map-wrapper .map{
-        margin-bottom:20px
     }
 }
 
