--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -237,6 +237,7 @@ span.contacts_item-title {text-transform: uppercase;font-weight: 600;font-size: 
 .about_item {display: flex;padding: 10px 0px;align-items: center;gap: 15px}
 .about_item-number {font-size: 40px;color: #3f3354}
 .thrid_block_about .page__about_wrapper {padding-bottom: 20px}
+.page__about-text-block{border: 1px solid #3f3354;border-radius: 5px;padding: 50px;margin: 20px 0;background-color: var(--main-white-color);color: #1a0930;font-weight: 600;text-align: center}
 .wpcf7-form{padding:20px 0}
 .wpcf7-form input,.wpcf7-form textarea{width:100%;height:40px;border-radius:5px;border:1px solid #3f3354;background-color:#200e38;margin:5px 0;padding-left:8px;color: var(--main-white-color)}
 .wpcf7-form textarea{padding-top:8px}
