--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1440,7 +1440,6 @@ section.page__contacts-map{
 .page__contacts.info_block {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  /* justify-content: space-between; */
   padding-bottom: 30px;
 }
 
@@ -1518,6 +1517,17 @@ span.contacts_item-title {
 
 .thrid_block_about .page__about_wrapper {
   padding-bottom: 20px;
+}
+
+.page__about-text-block{
+  border: 1px solid #3f3354;
+  border-radius: 5px;
+  padding: 50px;
+  margin: 20px 0; 
+  background-color: var(--main-white-color);
+  color: #1a0930;
+  font-weight: 600;
+  text-align: center
 }
 
 /*---------------------------------------------------------------------------------------------------*/
