--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -51,7 +51,7 @@ main.page{margin-top:68px}
 .main_block__wrapper{max-width:657px;margin:0 auto}
 .main-content{position:relative;z-index:4;display:flex;flex-direction:column;width:60%}
 .main-content_wrapper{max-width:600px}
-.main-title{margin-bottom:39px;font-family:"Inter";font-style:normal;font-weight:500;font-size:45px;line-height:135%;text-transform:uppercase;color:var(--main-white-color)}
+.main-title{font-family:"Inter";font-style:normal;font-weight:500;font-size:45px;line-height:135%;text-transform:uppercase;color:var(--main-white-color)}
 .main_subtext{padding: 35px 0;font-size: 20px}
 .main-subtitle{display:flex;margin-bottom:56px;justify-content:space-between}
 .main-subtitle__item{font-family:"Open Sans";font-style:normal;font-weight:400;font-size:16px;line-height:24px;color:var(--main-white-color);display:flex;align-items:center;gap:25px}
