--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1226,10 +1226,16 @@ section.page__service-offer
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------article-page-----------------------------------*/
 
-.service-article_text img {
-  width: 100%;
-  object-fit: contain;
+.service-article_text figure {
+  max-height: 400px;
 }
+
+.service-article_text figure img {
+  width: 100%;
+  max-height: 400px;
+  object-fit: cover;
+}
+
 .service-article_img {
   width: 100%;
   height: 324px;
@@ -1237,6 +1243,7 @@ section.page__service-offer
   border-radius: 5px;
   margin-bottom: 48px;
 }
+
 .service-article_text {
   font-family: "Inter";
   color: var(--article-text-color);
