--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1233,8 +1233,9 @@ section.page__service-offer
 
 .service-article_text figure img {
   width: 100%;
-  max-height: 400px;
-  object-fit: cover;
+    height: auto;
+    max-height: 400px;
+    object-fit: cover
 }
 
 .service-article_img {
