--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -185,6 +185,8 @@ main.page{margin-top:68px}
     font-size: 18px;
     margin: 0 0 5px;
     transition: color .35s;
+    border: 1px solid #6025BF;
+    border-radius: 5px
   }
   
   .faq_accordion input{
@@ -196,6 +198,9 @@ main.page{margin-top:68px}
   }
   .faq_accordion input:checked + label {  
     color: var(--main-white-color);
+    border: 1px 1px 0px 1px;
+    border: solid #6025BF;
+    border-radius: 5px
   }
   .faq_accordion input:checked + label:before {
     transition: transform .35s;
@@ -206,6 +211,9 @@ main.page{margin-top:68px}
     margin-top: -5px;
     color: var(--article-text-color);
     padding: 20px 30px 10px;
+    border: 0px 1px 1px 1px;
+    border: solid #6025BF;
+    border-radius: 5px
   }
 
 .page-header{color:var(--main-white-color);font-family:"Inter";padding:25px 0 0}
