--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -199,8 +199,11 @@ main.page{margin-top:68px}
   .faq_accordion input:checked + label {  
     color: var(--main-white-color);
     border: 1px 1px 0px 1px;
+    border-top: 1px;
+    border-right: 1px;
+    border-left: 1px;
     border: solid #6025BF;
-    border-radius: 5px
+    border-radius: 5px 5px 0 0
   }
   .faq_accordion input:checked + label:before {
     transition: transform .35s;
@@ -212,8 +215,11 @@ main.page{margin-top:68px}
     color: var(--article-text-color);
     padding: 20px 30px 10px;
     border: 0px 1px 1px 1px;
+    border-bottom: 1px;
+    border-right: 1px;
+    border-left: 1px;
     border: solid #6025BF;
-    border-radius: 5px
+    border-radius: 0 0 5px 5px
   }
 
 .page-header{color:var(--main-white-color);font-family:"Inter";padding:25px 0 0}
