--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1123,8 +1123,11 @@ margin-right: 30px;
 .faq_accordion input:checked + label {  
   color: var(--main-white-color);
   border: 1px 1px 0px 1px;
+  border-top: 1px;
+  border-right: 1px;
+  border-left: 1px;
   border: solid #6025BF;
-  border-radius: 5px
+  border-radius: 5px 5px 0 0
 }
 .faq_accordion input:checked + label:before {
   transition: transform .35s;
@@ -1136,8 +1139,11 @@ margin-right: 30px;
   color: var(--article-text-color);
   padding: 20px 30px 10px;
   border: 0px 1px 1px 1px;
+  border-bottom: 1px;
+  border-right: 1px;
+  border-left: 1px;
   border: solid #6025BF;
-  border-radius: 5px
+  border-radius: 0 0 5px 5px
 }
 
 /*---------------------------------------------------------------------------------------------------*/
