--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1123,10 +1123,9 @@ margin-right: 30px;
 .faq_accordion input:checked + label {  
   color: var(--main-white-color);
   border: 1px 1px 0px 1px;
-  border-top: 1px;
-  border-right: 1px;
-  border-left: 1px;
-  border: solid #6025BF;
+  border-top: 1px solid #6025BF;
+  border-right: 1px solid #6025BF;
+  border-left: 1px solid #6025BF;
   border-radius: 5px 5px 0 0
 }
 .faq_accordion input:checked + label:before {
@@ -1138,11 +1137,9 @@ margin-right: 30px;
   margin-top: -5px;
   color: var(--article-text-color);
   padding: 20px 30px 10px;
-  border: 0px 1px 1px 1px;
-  border-bottom: 1px;
-  border-right: 1px;
-  border-left: 1px;
-  border: solid #6025BF;
+  border-bottom: 1px solid #6025BF;
+  border-right: 1px solid #6025BF;
+  border-left: 1px solid #6025BF;
   border-radius: 0 0 5px 5px
 }
 
