--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -174,6 +174,7 @@ main.page{margin-top:68px}
     margin: 0 0 10px;
   }
   .faq_accordion label {
+    margin-top: 10px;
     cursor: pointer;
     display: block;
     padding: 15px 20px;
@@ -185,7 +186,7 @@ main.page{margin-top:68px}
     font-size: 18px;
     margin: 0 0 5px;
     transition: color .35s;
-    border: 1px solid #6025BF;
+    border: 1px solid var(--article-text-color);
     border-radius: 5px
   }
   
@@ -195,6 +196,7 @@ main.page{margin-top:68px}
   .faq_accordion label:before {
     content: '\276F';
     float: right;
+    color: var(--article-text-color)
   }
   .faq_accordion input:checked + label {  
     color: var(--main-white-color);
@@ -208,6 +210,7 @@ main.page{margin-top:68px}
   .faq_accordion input:checked + label:before {
     transition: transform .35s;
     transform: rotate(90deg);
+    color: #6025BF
   }
   .faq_accordion input:checked + label + .acor-body {
     height: auto;
