--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -184,7 +184,6 @@ main.page{margin-top:68px}
     box-sizing: border-box;
     z-index: 100; 
     font-size: 18px;
-    margin: 0 0 5px;
     transition: color .35s;
     border: 1px solid var(--article-text-color);
     border-radius: 5px
@@ -205,6 +204,7 @@ main.page{margin-top:68px}
     border-right: 1px solid #6025BF;
     border-left: 1px solid #6025BF; */
     border-bottom: none;
+    border-color: #6025BF;
     border-radius: 5px 5px 0 0
   }
   .faq_accordion input:checked + label:before {
