--- a/static/css/style.css
+++ b/static/css/style.css
@@ -945,7 +945,7 @@ margin-right: 30px;
   font-size: 16px;
   line-height: 135%;
   color: #1a0930;
-  padding: 20px 0 5px 23px;
+  padding: 20px 23px 5px 23px;
 }
 .articles__text {
   font-family: "Inter";
