--- a/static/css/style-adaptive-min.css
+++ b/static/css/style-adaptive-min.css
@@ -8,6 +8,15 @@
     body.lock{
         overflow:hidden
     }
+    .wp-block-image.aligncenter, 
+    .wp-block-image .aligncenter, 
+    .wp-block-image.alignleft, 
+    .wp-block-image .alignleft, 
+    .wp-block-image.alignright, 
+    .wp-block-image .alignright{
+        display:block;
+        float:none
+    }
 }
 @media(max-width:460px){
     .service-selection__title_h2{
