styling adaptive form

--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -647,6 +647,15 @@
 }
 
 /*---------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------form----------------------------------*/
+@media(max-width:560px){
+    .contact_form-row .contact_form{
+        grid-template-columns: 1fr
+    }
+}
+
+
+/*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------footer----------------------------------*/
 @media(max-width:768px){
     .footer__navigation{
