--- a/static/css/style-adaptive-min.css
+++ b/static/css/style-adaptive-min.css
@@ -565,6 +565,13 @@
          width: 100% 
     }
 }
+
+@media(max-width:560px){
+    .contact_form-row .contact_form{
+        grid-template-columns: 1fr
+    }
+}
+
  @media(max-width:768px){
     .footer__navigation{
         order:1;
