--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -308,7 +308,7 @@ span.contacts_item-title {text-transform: uppercase;font-weight: 600;font-size: 
 .page__about-text-block{border: 1px solid #3f3354;border-radius: 5px;padding: 50px;margin: 20px 0;background-color: var(--main-white-color);color: #1a0930;font-weight: 600;text-align: center}
 .wpcf7-form{padding:20px 0}
 .wpcf7-form input,.wpcf7-form textarea{width:100%;height:40px;border-radius:5px;border:1px solid #3f3354;background-color:#200e38;padding-left:8px;color: var(--main-white-color)}
-/* .wpcf7-form textarea{padding-top:8px} */
+.wpcf7-form textarea{padding-top:8px} 
 .wpcf7-form input::placeholder,.wpcf7-form textarea::placeholder{color:var(--article-text-color);font-family:"Inter"}
 input.wpcf7-form-control.has-spinner.wpcf7-submit{background-color:#a769f7;color:#fff;text-transform:uppercase}
 .form_title{text-transform:uppercase}
