styling form in cat

--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -654,6 +654,12 @@
     }
 }
 
+@media(max-width: 768px){
+    .page_contacts-form.contact_form-grid{
+        padding: 0px 20px
+    }
+}
+
 
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------footer----------------------------------*/
