--- a/static/css/style.css
+++ b/static/css/style.css
@@ -868,7 +868,7 @@ flex-shrink: 3;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: -50px;
+  /* margin-left: -50px; */
 }
 .service-selection__lightning_right {
   flex-shrink: 3;
