--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1273,7 +1273,7 @@ p.tariff_price {
   width:100%;
   padding-top:10px
 }
-.service_text-block {
+/* .service_text-block {
   border: 1px solid #3f3354;
   border-radius: 5px;
   padding: 50px;
@@ -1281,7 +1281,7 @@ p.tariff_price {
   background-color: var(--main-white-color);
   color: #1a0930;
   font-weight: 600;
-}
+} */
 section.page__service-offer,
 section.page__service-offer
 {
