--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -246,7 +246,7 @@ p.tariff_price{font-size:14px;text-align: center}
 .offer_block-tariff.slick-slide{flex: 0 0 auto; height: auto;justify-content: space-between}
 .offer_block-tariff-top{border-bottom:1px solid #3f3354;width: 100%;padding-bottom: 10px}
 .offer_block-btn-wrapper{border-top:1px solid #3f3354;width:100%;padding-top:10px}
-/* .service_text-block {border: 1px solid #3f3354;border-radius: 5px;padding: 50px;margin-top: 50px;background-color: var(--main-white-color);color: #1a0930;font-weight: 600} */
+.service_text-block {padding: 20px 0px} 
 section.page__service-offer{padding: 0;padding-top: 75px}
 .service-article_text figure {max-height: 400px;margin-bottom: 20px}
 .service-article_text figure img {width: 100%;height: auto;max-height: 400px; object-fit: cover}
