--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1273,15 +1273,9 @@ p.tariff_price {
   width:100%;
   padding-top:10px
 }
-/* .service_text-block {
-  border: 1px solid #3f3354;
-  border-radius: 5px;
-  padding: 50px;
-  margin-top: 50px 0;
-  background-color: var(--main-white-color);
-  color: #1a0930;
-  font-weight: 600;
-} */
+ .service_text-block {
+  padding: 20px 0px
+} 
 section.page__service-offer,
 section.page__service-offer
 {
