--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -537,15 +537,15 @@
 
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------category-list----------------------------------*/
-@media (max-width: 768px) {
-    
-}
 @media(max-width: 768px) {
     .category-list_service-selection {
         margin: 50px 0px
     }
     .category-list_description {
         font-size: 16px;        
+    }
+    .cases-block__container{
+        margin-top: 40px
     }
 }   
 
