--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1551,14 +1551,15 @@ span.contacts_item-title {
 } */
 
 .page_contacts-text-block{
-  border: 1px solid #3f3354;
+  /* border: 1px solid #3f3354;
   border-radius: 5px;
   padding: 50px;
   margin: 20px 0; 
   background-color: var(--main-white-color);
   color: #1a0930;
   font-weight: 600;
-  text-align: center
+  text-align: center */
+  padding: 20px 0
 }
 
 .wpcf7-spinner{
@@ -1595,14 +1596,15 @@ span.contacts_item-title {
 }
 
 .page__about-text-block{
-  border: 1px solid #3f3354;
+  /* border: 1px solid #3f3354;
   border-radius: 5px;
   padding: 50px;
   margin: 20px 0; 
   background-color: var(--main-white-color);
   color: #1a0930;
   font-weight: 600;
-  text-align: center
+  text-align: center */
+  padding: 20px 0
 }
 
 /*---------------------------------------------------------------------------------------------------*/
