styling achievments section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -757,6 +757,21 @@ main.page{
 }
 
 /*---------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------achievments_section----------------------------*/
+
+.achievements_wrapper{
+  display: flex;
+  display: -webkit-flex;
+  gap: 20px
+}
+
+.achievements_left,
+.achievements_right{
+  width: 50%
+}
+
+
+/*---------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------page__reviews-block----------------------------*/
 
 .page__reviews-block {
