--- a/static/css/style-adaptive-min.css
+++ b/static/css/style-adaptive-min.css
@@ -317,6 +317,13 @@
     .service-selection__body{
         justify-content:center
     }
+    .achievements_wrapper{
+        gap: 0px
+    }    
+    .achievements_left,
+    .achievements_right{
+        width: 100%
+    }
     .reviews_gradient_bg-img{
         top:102px;
         right:0;
