--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -369,7 +369,8 @@
     }
 
     .achievements_wrapper{
-        gap: 0px
+        gap: 0px;
+        flex-direction: column;
     }
     
     .achievements_left,
