--- a/static/css/style.css
+++ b/static/css/style.css
@@ -459,15 +459,16 @@ main.page{
 }
 
 .main-image__el:first-child {
-  border: 1px solid #3F3354;
-  
+  border: 1px solid #3F3354;  
   display:flex;
   font-family: "Open Sans";
   font-style: normal;
   color: var(--main-white-color);
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
+  min-height:150px;
+  padding: 0 10px
 }
 .main-image__text_title {
   font-style: normal;
