--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -164,6 +164,8 @@
         display: none;
     }
     .menu__item{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -195,6 +197,8 @@
 @media(max-width:1130px) {
     .main-block__body {
         position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
         flex-wrap: wrap;
       }
@@ -306,10 +310,14 @@
         width: 25px
     }
     .main-3columns_mobile .slick-initialized .slick-slide{
-        display:flex;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
         justify-content: center;
     }
     .main-3columns_mobile .slick-track {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
         align-items: center;
     }
@@ -597,6 +605,8 @@
         gap:20px
     }
     .contacts_item{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
     }
     .contacts_item:nth-child(odd){
@@ -629,6 +639,8 @@
         grid-template-columns: 1fr;
     }
     .contacts_item{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
     }
     .contacts_item:nth-child(odd){
