--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -89,7 +89,7 @@ main.page{margin-top:68px}
 .serveces-item4{width:49.1%}
 .serveces-item5{width:49.1%}
 .page__choice-block{position:relative}
-.choice-block__body{position:relative;display: -webkit-box;display: -ms-flexbox;display: flex;justify-content:space-between;z-index:7;align-items: center}
+.choice-block__body{position:relative;display: -webkit-box;display: -ms-flexbox;display: flex;justify-content:space-between;z-index:7;align-items: stretch;flex-direction: row}
 .background-choice{position:absolute;width:380.09px;height:270.36px;right:-130px;top:100px;background:radial-gradient(51.61% 115.36% at 67.24% 51.72%,rgba(73,0,107,0.396) 0%,rgba(255,31,233,0.4) 57.07%,rgba(222,129,255,0.4) 100%);filter:blur(100px);transform:rotate(-80.12deg)}
 .background-choice-img{position:absolute;width:50vw;height:1043px;background-image:url(../img/bg-choises.png);background-repeat:no-repeat;right:0;top:-329px;z-index:5}
 .choice-block__text{display: -webkit-box;display: -ms-flexbox;display: flex;flex-direction:column;width: 50%;padding-right: 10px}
@@ -100,8 +100,8 @@ main.page{margin-top:68px}
 .choice-block__el{font-family:"Inter";font-size:16px;line-height:22px;line-height:135%;color:#7f7190;list-style:disc;margin-bottom:5px}
 .choice-block__button{margin-top:70px}
 .choice-block__href{font-family:"Open Sans";font-style:normal;font-weight:400;font-size:16px;line-height:24px;padding:12px 55px;background:#6025bf;border-radius:5px;text-align:center;color:var(--main-white-color);display: block;max-width: 250px;}
-.choice-block__img{position:relative;z-index:1}
-.choice-block__img img{border-radius:5px}
+.choice-block__img{position:relative;z-index:1;width: 40%;display: flex;justify-content: flex-end;align-items: stretch}
+.choice-block__img img{border-radius:5px;height: 100%;width: 100%;object-fit: cover;}
 .cases-block__container,.tariffs-block__container{max-width:90vw;margin-top: 75px}
 .case_slide_wrapper{position:relative;margin:0 10px}
 .case_slide_wrapper::after{content:"";display:block;width:100%;height:100%;position:absolute;top:0;left:0;background:transparent;background-image:linear-gradient(to bottom,rgba(48,34,71,0),#220A3D);opacity:.8}
