--- a/static/css/style.css
+++ b/static/css/style.css
@@ -714,7 +714,8 @@ main.page{
     display: flex;
   flex-direction: column;
   width: 50%;
-  padding-right: 10px
+  padding-right: 10px;
+  justify-content: space-between;
 }
 .choice-block__title {
   /* padding-top: 31px; */
